<resources>
    <!-- Starting Activity -->
    <string name="app_name">MathGame</string>
    <string name="game_title">Mobile Math</string>
    <string name="game_subtitle">Educational Quiz Game for Students</string>
    <string name="btn_student">Student</string>
    <string name="btn_teacher">Teacher</string>

    <!-- Student Detail Activity -->
    <string name="welcome">Welcome!</string>
    <string name="welcome_intro">Test your knowledge with a fun quiz!</string>
    <string name="studentDetailsSubtitle"><u>Student Details</u></string>
    <string name="enterName">Please enter your name:</string>
    <string name="gameInfoSubtitle"><u>Game Information</u></string>
    <string name="game_description">Each game consists of 14 mathematical questions, covering 7 topics. Questions are presented in a multiple choice format, with only one correct answer.
        \n\nPlease complete all questions once started as progress is not saved.
        \n\nHave Fun!
    </string>
    <string name="btnStart">start</string>

    <!-- Game Screen Activity -->
    <string name="topic"><u>Topic!</u></string>

    <!-- Game End Activity -->
    <string name="resultTitle"><u>Quiz Complete</u></string>
    <string name="info">
        \nView detailed information about your score below.
        \nInteract with the pie chart to view specific details about your quiz session.</string>
    <string name="btn_MainMenu">Main Menu</string>

    <!-- Admin Login Screen -->
    <string name="adminLogin"><u>Admin</u></string>
    <string name="adminDesc">Enter your user name and password to gain access to the question screen.
        The following screen will allow you to add new game questions for students.
    \n\nNote: Password is case sensitive</string>
    <string name="userName">User name:</string>
    <string name="password">Password:</string>
    <string name="passwordPrompt">Note: Password is case sensitive</string>
    <string name="btn_Login">Login</string>


    <!-- Admin Question Screen -->
    <string name="addQuestion"><u>Add Question</u></string>
    <string name="questionDesc"><u>Question Description</u></string>
    <string name="answerDesc"><u>Answer Description</u></string>
    <string name="questionTopic">1: Number/PlaceValue\t\t2: Addition/Subtraction
    \n3: Multiplication/Division\t\t4: Fractions
    \n5: Measurement\t\t6: Geometry/ShapeProperties
    \n7: Geometry/PosAndDirection</string>

    <string name="questionText">Question Text:</string>
    <string name="questionTopicID">Question Topic (1-7):</string>
    <string name="correctAnswer">Correct Answer Text:</string>
    <string name="incorrectAns2">Option 2 Text:</string>
    <string name="incorrectAns3">Option 3 Text:</string>
    <string name="incorrectAns4">Option 4 Text:</string>
    <string name="incorrectAns5">Option 5 Text:</string>


    <string name="btn_Submit">Submit</string>

</resources>
