<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".StudentDetailActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWelcomeIntro"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/welcome_intro"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewStudentSubtitle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/studentDetailsSubtitle"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewGameSubtitle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/gameInfoSubtitle"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:text="@string/game_description"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="@string/btnStart" />

    </LinearLayout>

</LinearLayout>