<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Controller.StartScreenActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/game_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/game_subtitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="378dp"
        android:layout_height="330dp"
        app:srcCompat="@drawable/images" />

    <Button
        android:id="@+id/buttonStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startGameStudent"
        android:text="@string/btn_student" />

    <Button
        android:id="@+id/buttonTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startGameTeacher"
        android:text="@string/btn_teacher" />

</LinearLayout>