<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".controller.QuizResultActivity">

    <TextView
        android:id="@+id/textViewResultTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/resultTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textViewPlayerOverview"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="player score"
        android:textAlignment="center"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:text="@string/info"
        android:textAlignment="center" />

    <com.anychart.AnyChartView
        android:id="@+id/any_chart_view"
        android:layout_width="377dp"
        android:layout_height="347dp" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonMainMenu"
        android:text="@string/btn_MainMenu" />

</LinearLayout>