<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".controller.AdminQuestionActivity">

    <TextView
        android:id="@+id/textViewAddQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addQuestion"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewQuestionPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/questionText"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextQuestionText"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTopicID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/questionTopicID"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextQuestionTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestionIDs"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:text="@string/questionTopic"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answerDesc"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correctAnswer"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewOption2"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/incorrectAnswer"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTexOption2"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewOption3"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/incorrectAnswer"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextOption3"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewOption4"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/incorrectAnswer"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextOption4"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewOption5"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/incorrectAnswer"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextOption5"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="buttonAdd"
        android:text="@string/btn_Submit" />

</LinearLayout>